web/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"assets":"assets-backend-config"}}'
spec:
  ports:
    - name: dynamic
      port: 80
      targetPort: 3000
    - name: assets
      port: 81
      targetPort: 3000
  type: NodePort
  selector:
    app: web
